--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/Mango-Smoothie/NEC_Website#readme",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.17.3"
+    "csv-parser": "^3.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.3.1"
   }
 }
